--- a/styles.css
+++ b/styles.css
@@ -142,14 +142,57 @@ a.footerlink{
     font-size: 20px;    
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (min-width: 100px){
 
-    body{
-        background-color: purple;
+    div.mobilemenu{
+        display:none;
     }
+
+    div.mmcontent{
+        display: none;
+    }
+}   
+
+@media only screen and (max-width: 1100px) {
 
     div.controw{
         flex-direction: column;
+    }
+
+    #mmmbutton{
+        background-color: grey;
+        width: 100%;
+        text-align: center;
+        align-self: center;
+    }
+
+    #mmmbutton:hover #mmcontent{
+        display: block;
+    }
+
+    #mmcontent{
+        align-self: center;
+        width: 80vw;
+        display: flex;
+        background-color: grey;
+        flex-direction: column;
+        flex-wrap: wrap;
+        padding: 2px;
+        justify-content: space-evenly;  
+        border-radius: 5px;
+        display: none;
+    }
+
+    div.mobilemenu{
+        align-self: center;
+        width: 80vw;
+        display: flex;
+        background-color: grey;
+        flex-direction: column;
+        flex-wrap: wrap;
+        padding: 2px;
+        justify-content: space-evenly;  
+        border-radius: 5px;
     }
 
     div.menu{
@@ -162,6 +205,7 @@ a.footerlink{
         padding: 2px;
         justify-content: space-evenly;  
         border-radius: 5px;
+        display: none;
     }
 
     div.button{
