--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,33 @@
 @-webkit-keyframes youdied {
-    0% {transform: rotate(0deg); color: red;}
-    25% {transform: rotate(72deg); color: yellow;}
-    50% {transform: rotate(144deg); color: green;}
-    75% {transform: rotate(216deg); color: blue;}
-    100%{transform: rotate(288deg); color: purple}
+    0% {
+        transform: rotate(0deg);
+        color: red;
+    }
+    25% {
+        transform: rotate(72deg);
+        color: yellow;
+    }
+    50% {
+        transform: rotate(144deg);
+        color: green;
+    }
+    75% {
+        transform: rotate(216deg);
+        color: blue;
+    }
+    100% {
+        transform: rotate(288deg);
+        color: purple
+    }
 }
 
-body.youdied{
+body.youdied {
     background-image: url(giiiiif.gif);
     background-size: 80px;
     background-repeat: repeat;
 }
 
-img.youdied{
+img.youdied {
     transform: rotate(20deg);
     -webkit-animation: youdied .1s linear 1s infinite alternate;
     animation: youdied .1s linear 1s infinite alternate;
@@ -20,20 +35,20 @@ img.youdied{
     margin: auto
 }
 
-body{
+body {
     background-image: url(background.png);
     font-family: Helvetica;
     background-attachment: fixed;
 }
 
-div.containall{
+div.containall {
     display: flex;
     /*border: 2px blue solid;*/
     justify-content: flex-start;
     flex-direction: column;
 }
 
-div.menu{
+div.menu {
     align-self: center;
     width: 80vw;
     display: flex;
@@ -41,21 +56,21 @@ div.menu{
     flex-direction: row;
     flex-wrap: wrap;
     padding: 5px;
-    justify-content: space-evenly;  
+    justify-content: space-evenly;
 }
 
-div.button{
+div.button {
     background-color: grey;
     width: 15vw;
     text-align: center;
 }
 
-div.button:hover{
+div.button:hover {
     background-color: orange;
     font-weight: bold;
 }
 
-div.cont1{
+div.cont1 {
     align-self: center;
     width: 80vw;
     display: flex;
@@ -65,8 +80,7 @@ div.cont1{
     flex-wrap: wrap;
 }
 
-div.cont2{
-
+div.cont2 {
     width: 80vw;
     display: flex;
     flex-direction: column;
@@ -74,18 +88,18 @@ div.cont2{
     /*border: 2px blue solid;*/
 }
 
-div.controw{
+div.controw {
     width: 80vw;
     display: flex;
     flex-direction: row;
 }
 
-div.spacer{
+div.spacer {
     padding: 5px;
-   /* border: solid 2px yellow;*/
+    /*border: solid 2px yellow;*/
 }
 
-div.footer{
+div.footer {
     align-self: center;
     width: 80vw;
     background-color: grey;
@@ -94,95 +108,100 @@ div.footer{
     justify-content: flex-start;
 }
 
-p.menubutton{
+p.menubutton {
     padding: 5px;
 }
 
-td.btrue::after{
+td.btrue::after {
     content: "behaald";
     background-color: greenyellow;
 }
 
-td.bfalse::after{
+td.bfalse::after {
     content: "niet behaald";
     background-color: red;
 }
 
-td.bpending::after{
+td.bpending::after {
     content: "in afwachting";
     background-color: #00c3ff;
 }
 
-td, th{
+td, th {
     border: 2px solid #dddddd;
     text-align: left;
-    padding: 5px;
+    padding: 2px;
     background-color: #eeeeee;
-    }
+}
 
-
-h2{
+h2 {
     font-size: 1em;
 }
 
-a{
+h1.titel {
+    text-align: center;
+    padding: 0px;
+}
+
+a {
     text-decoration: none;
     color: darkblue;
 }
 
-a.menu{
+a.menu {
     color: black;
 }
 
-a.footerlink{
+a.footerlink {
     color: orange;
     text-decoration: none;
     padding: 5px;
     font-weight: bold;
-    font-size: 20px;    
+    font-size: 20px;
 }
 
-@media only screen and (min-width: 100px){
-
-    div.mobilemenu{
-        display:none;
-    }
-
-    div.mmcontent{
+@media only screen and (min-width: 100px) {
+    div.mobilemenu {
         display: none;
     }
-}   
+    div.mmcontent {
+        display: none;
+    }
+}
 
 @media only screen and (max-width: 1100px) {
-
-    div.controw{
+    h1 {
+        font-size: 9vw;
+        text-align: center;
+    }
+    td, th {
+        font-size: 4vw;
+        padding: 0px;
+    }
+    div.controw {
         flex-direction: column;
     }
-
-    #mmmbutton{
+    #mmmbutton {
         background-color: grey;
         width: 100%;
         text-align: center;
         align-self: center;
     }
-
-    #mmmbutton:hover #mmcontent{
+    #mmmbutton:hover #mmcontent {
         display: block;
     }
-
-    #mmcontent{
+    #mmcontent {
         align-self: center;
         width: 80vw;
         display: flex;
         background-color: grey;
         flex-direction: column;
         flex-wrap: wrap;
-        justify-content: space-evenly;  
+        justify-content: space-evenly;
         border-radius: 5px;
         display: none;
     }
-
-    div.mobilemenu{
+    div.mobilemenu {
         align-self: center;
         width: 80vw;
         display: flex;
@@ -190,11 +209,10 @@ a.footerlink{
         flex-direction: column;
         flex-wrap: wrap;
         padding: 2px;
-        justify-content: space-evenly;  
+        justify-content: space-evenly;
         border-radius: 5px;
     }
-
-    div.menu{
+    div.menu {
         align-self: center;
         width: 80vw;
         display: flex;
@@ -202,29 +220,25 @@ a.footerlink{
         flex-direction: column;
         flex-wrap: wrap;
         padding: 2px;
-        justify-content: space-evenly;  
+        justify-content: space-evenly;
         border-radius: 5px;
         display: none;
     }
-
-    div.button{
+    div.button {
         background-color: grey;
         width: 100%;
         text-align: center;
         align-self: center;
     }
-    
-    div.button:hover{
+    div.button:hover {
         background-color: orange;
         border: 2px grey solid;
         border-radius: 5px;
     }
-    
-    div.cont1{
+    div.cont1 {
         border-radius: 5px;
     }
-
-    div.footer{
+    div.footer {
         flex-direction: column;
         text-align: center;
         border-radius: 5px;
