--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body {
     background-image: url(background.png);
     font-family: Helvetica;
     background-attachment: fixed;
+    font-size: 1em;
 }
 
 div.containall {
@@ -65,6 +66,12 @@ div.button {
     text-align: center;
 }
 
+.button {
+    color: orange;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+}
+
 div.button:hover {
     background-color: orange;
     font-weight: bold;
@@ -74,7 +81,7 @@ div.cont1 {
     align-self: center;
     width: 80vw;
     display: flex;
-    background-color: rgb(255, 231, 187);
+    background-color: rgba(255, 224, 167, 0.5);
     justify-content: space-evenly;
     flex-direction: row;
     flex-wrap: wrap;
@@ -134,13 +141,18 @@ td, th {
     background-color: #eeeeee;
 }
 
+h3{
+    font-size: 1.5em;
+}
+
 h2 {
     font-size: 1em;
 }
 
-h1.titel {
+h1 {
     text-align: center;
     padding: 0px;
+    font-size: 2em;
 }
 
 a {
@@ -171,7 +183,7 @@ a.footerlink {
 
 @media only screen and (max-width: 1100px) {
     h1 {
-        font-size: 9vw;
+        font-size: 1.5em;
         text-align: center;
     }
     td, th {
