--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@-webkit-keyframes roll {
+/* @-webkit-keyframes roll {
     from { -webkit-transform: rotate(0deg) }
     to   { -webkit-transform: rotate(360deg) }
 }
@@ -22,33 +22,14 @@ body {
     -webkit-animation-iteration-count: 1;
 }
 
+/* barrel roll*/
 
-
-@-webkit-keyframes youdied {
-    0% {
-        transform: rotate(0deg);
-        color: red;
-    }
-    25% {
-        transform: rotate(72deg);
-        color: yellow;
-    }
-    50% {
-        transform: rotate(144deg);
-        color: green;
-    }
-    75% {
-        transform: rotate(216deg);
-        color: blue;
-    }
-    100% {
-        transform: rotate(288deg);
-        color: purple
-    }
+div{
+    /* border: 2px rgb(255, 0, 221) solid; */
 }
 
 body.youdied {
-    background-image: url(giiiiif.gif);
+    background-image: url(/images/giiiiif.gif);
     background-size: 80px;
     background-repeat: repeat;
 }
@@ -62,7 +43,7 @@ img.youdied {
 }
 
 body {
-    background-image: url(background.png);
+    background-image: url(images/background.png);
     font-family: Helvetica;
     background-attachment: fixed;
     font-size: 1em;
@@ -117,7 +98,7 @@ div.cont2 {
     width: 80vw;
     display: flex;
     flex-direction: column;
-    padding: 2vw;
+    padding: 1vw;
     /*border: 2px blue solid;*/
 }
 
@@ -213,6 +194,11 @@ img.prof {
     vertical-align: center;
 }
 
+img.home{
+    width: 100%;
+    height: 100%;
+}
+
 @media only screen and (min-width: 100px) {
     div.mobilemenu {
         display: none;
@@ -223,9 +209,20 @@ img.prof {
 }
 
 @media only screen and (max-width: 1100px) {
+    table{
+        align-self: center;
+        width: 95%
+    }
+    img.home{
+        width: 90%;
+        height: 90%;
+        align-self: center;
+    }
+
     img.prof {
         align-self: center;
-        width: 100px;
+        width: 90%;
+        height: 90%;
     }
     h1 {
         font-size: 1.5em;
