--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@-webkit-keyframes roll {
+ @-webkit-keyframes roll { 
     from { -webkit-transform: rotate(0deg) }
     to   { -webkit-transform: rotate(360deg) }
 }
@@ -21,7 +21,7 @@ body {
     -webkit-animation-duration: .7s;
     -webkit-animation-iteration-count: 1;
 }
-
+ 
 
 
 div{
@@ -98,7 +98,7 @@ div.cont2 {
     width: 80vw;
     display: flex;
     flex-direction: column;
-    padding: 1vw;
+    padding: 1vw
     /*border: 2px blue solid;*/
 }
 
